# Crossborder-ERP

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: README.md  pyproject.toml
backend/apps/addresses/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/audit/: middleware.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/common/: apps.py  configuration.py  csv_exports.py  exceptions.py  handlers.py  logging.py  middleware.py  pagination.py  responses.py  signals.py  urls.py  validators.py  views.py
backend/apps/content/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/files/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/finance/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/iam/: apps.py  authentication.py  dashboard.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
backend/apps/members/: apps.py  authentication.py  models.py  permissions.py  schema.py  serializers.py  services.py  urls.py  views.py
backend/apps/parcels/: import_export.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/products/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/purchases/: link_parser.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/regions/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: urls.py
(+539 files in other folders)
